# C-LAIfO

./: '  .gitignore  .gitignore.swp  .gitmodules  .test_point_cloud_generator.py.swp  2test_point_cloud.py  3d_train_LAIL_MI.py  Makefile  README.md  RenderOption_2025-03-03-12-06-17.json  camera_mismatch_train_LAIL_MI.py  combined_environment.yml  depth_code_trial.py  environment.yml  generate_data.py  pca_test.py  plot.py  plot_train_vs_eval.py  point_cloud_generator.py  point_cloud_generator_PCA.py  point_net.py  process_depth_information.py  requirements_backup.txt  second_test_point_cloud.py  test.py  test2.py  test_point_cloud.py  test_point_cloud_generator.py  test_skeleton.py  test_skeleton_from_file.py  third_test_point_cloud.py  train_LAIL.py  train_LAIL_MI.py  train_LAIL_MI_3d.py  train_LAIL_depth.py  train_LAIL_multi_envs.py  train_expert.py
BoundingBoxSkeleton/: functions.py  random_point_cloud_filtered.ply
DeepMind_control/: dmc.py  dmc_3d.py  dmc_camera_mismatch.py  dmc_expert.py  dmc_expert_3d.py  pixels.py  pixels_3d.py
L1MedialSkeleton/: functions.py  main.py  test.py
PCA/: generate_random_pc.py  point_cloud_generator.py
PCA/L1MedialSkeleton/cpp/: CMakeLists.txt  l1MedialSkeleton.cpp
agents/: addp.py  disentanAIL.py  lail.py  lail_bisim.py  lail_byol.py  lail_cl.py  lail_mi.py  patchAIL.py  sac.py
buffers/: np_replay_buffer.py  np_replay_buffer_depth.py  np_replay_buffer_original_copy.py
dda/: functional.py  operations.py
dmc_remastered/: __init__.py  cartpole.py  cartpole2poles.py  cheetah.py  dog.py  finger.py  generate_visuals.py  (+5 more)
(+178 files in other folders)
